--- a/src/main/resources/FXML/Classement.fxml
+++ b/src/main/resources/FXML/Classement.fxml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.ClassementController">
+
+<AnchorPane prefHeight="620.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.ClassementController">
    <children>
-      <VBox alignment="CENTER" layoutX="130.0" layoutY="34.0" spacing="10.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
+      <VBox alignment="CENTER" layoutY="140.0" prefHeight="480.0" prefWidth="600.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="140.0">
          <children>
-            <Label text="Classement des séries" textAlignment="CENTER">
+            <Label text="Ranking of series" textAlignment="CENTER">
                <font>
                  
 <Font size="24.0" />
@@ -15,14 +22,14 @@
             </Label>
             <HBox alignment="CENTER" spacing="10.0">
                <children>
-                  <Label text="Date de début:" />
+                  <Label text="Begin Date" />
                   <DatePicker fx:id="startDatePicker" />
-                  <Label text="Date de fin:" />
+                  <Label text="End Date" />
                   <DatePicker fx:id="endDatePicker" />
-                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#SeriesRanking" text="Chercher" />
+                  <Button fx:id="searchButton" mnemonicParsing="false" text="Search" />
                </children>
             </HBox>
-            <TableView fx:id="seriesRankingTable" prefHeight="200.0" prefWidth="600.0">
+            <TableView fx:id="seriesRankingTable" prefHeight="211.0" prefWidth="600.0">
                <columns>
                   <TableColumn fx:id="rankColumn" prefWidth="75.0" text="Rang" />
                   <TableColumn fx:id="nomColumn" prefWidth="75.0" text="Nom" />
