--- a/src/main/resources/FXML/HomePage.fxml
+++ b/src/main/resources/FXML/HomePage.fxml
@@ -6,18 +6,19 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox prefHeight="1000.0" prefWidth="3000" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.HomePageController" >
+
+<VBox prefHeight="1628.0" prefWidth="1301.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.HomePageController">
    <children>
-      <AnchorPane prefHeight="689.0" prefWidth="1097.0" >
+      <AnchorPane prefHeight="1628.0" prefWidth="1266.0">
          <children>
-            <Label fx:id="lab1" layoutX="44.0" layoutY="54.0" text="Trending" />
+            <Label fx:id="lab1" layoutX="39.0" layoutY="58.0" text="Trending" translateX="12.0" />
             <ScrollPane layoutX="42.0" layoutY="120.0" prefHeight="320.0" prefWidth="1200" vbarPolicy="NEVER">
                <content>
                   <HBox fx:id="trendingPane" prefHeight="185.0" prefWidth="1026.0" />
                </content>
             </ScrollPane>
-            <FlowPane fx:id="sortedByViewsPane" layoutX="25.0" layoutY="500.0" prefHeight="219.0" prefWidth="1000.0" />
-            <Label fx:id="lab2" layoutX="42.0" layoutY="450.0" text="popular" />
+            <FlowPane fx:id="sortedByViewsPane" layoutX="39.0" layoutY="417.0" prefHeight="1047.0" prefWidth="1195.0" translateY="110.0" />
+            <Label fx:id="lab2" layoutX="42.0" layoutY="464.0" text="popular" />
          </children>
       </AnchorPane>
    </children>
