--- a/src/main/resources/FXML/SearchMovies.fxml
+++ b/src/main/resources/FXML/SearchMovies.fxml
@@ -18,6 +18,13 @@
          <TextField fx:id="countryOfOriginSearchTextField" layoutX="78.0" layoutY="388.0" />
          <TextField fx:id="producerSearchTextField" layoutX="78.0" layoutY="468.0" />
          <TextField fx:id="actorSearchTextField" layoutX="77.0" layoutY="540.0" />
+         <Label layoutX="30.0" layoutY="72.0" text="Title" />
+         <Label layoutX="29.0" layoutY="146.0" text="Year" />
+         <Label layoutX="26.0" layoutY="222.0" text="Genre" />
+         <Label layoutX="13.0" layoutY="309.0" text="Language" />
+         <Label layoutX="19.0" layoutY="391.0" text="Country" />
+         <Label layoutX="15.0" layoutY="471.0" text="Producer" />
+         <Label layoutX="26.0" layoutY="543.0" text="Actor" />
       </AnchorPane>
    </children>
 </VBox>
