--- a/src/main/resources/FXML/SearchSeries.fxml
+++ b/src/main/resources/FXML/SearchSeries.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
+
 <VBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.SearchSeriesController">
    <children>
       <AnchorPane prefHeight="584.0" prefWidth="893.0">
            <FlowPane fx:id="seriesFlowPane" layoutX="290.0" layoutY="7.0" prefHeight="558.0" prefWidth="591.0" />
-            <Label text="Search Movies" />
+            <Label text="Search Series" />
          <TextField fx:id="serieTitleSearchTextField" layoutX="78.0" layoutY="68.0" />
          <TextField fx:id="releaseYearSearchTextField" layoutX="79.0" layoutY="142.0" />
          <TextField fx:id="genreSearchTextField" layoutX="80.0" layoutY="219.0" />
@@ -16,6 +18,13 @@
          <TextField fx:id="countryOfOriginSearchTextField" layoutX="78.0" layoutY="388.0" />
          <TextField fx:id="producerSearchTextField" layoutX="78.0" layoutY="468.0" />
          <TextField fx:id="actorSearchTextField" layoutX="77.0" layoutY="540.0" />
+         <Label layoutX="26.0" layoutY="72.0" text="Title" />
+         <Label layoutX="26.0" layoutY="146.0" text="Year" />
+         <Label layoutX="24.0" layoutY="223.0" text="Genre" />
+         <Label layoutX="14.0" layoutY="310.0" text="Language" />
+         <Label layoutX="17.0" layoutY="392.0" text="Country" />
+         <Label layoutX="14.0" layoutY="472.0" text="Producer" />
+         <Label layoutX="23.0" layoutY="544.0" text="Actor" />
       </AnchorPane>
    </children>
 </VBox>
