--- a/src/main/resources/FXML/UserAdd.fxml
+++ b/src/main/resources/FXML/UserAdd.fxml
@@ -1,39 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 
-<VBox xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.fsb.FlixFlow.Controllers.UserAddController"
-      spacing="10">
-    <Label text="Add Utilisateur" />
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="org.fsb.FlixFlow.Controllers.UserAddController">
+    <Label text="Add User" />
     <GridPane hgap="10" vgap="10">
-        <Label text="First Name" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-        <Label text="Last Name" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-        <Label text="Email" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-        <Label text="Password" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-        <Label text="Birth Date" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-        <Label text="Type" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+        <Label text="First Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <Label text="Last Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <Label text="Email" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <Label text="Password" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <Label text="Birth Date" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <Label text="Type" GridPane.rowIndex="5" />
 
-        <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-        <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-        <TextField fx:id="emailTextField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-        <PasswordField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-        <DatePicker fx:id="birthDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-        <ComboBox fx:id="userTypeComboBox" />
+        <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="emailTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <PasswordField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <DatePicker fx:id="birthDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <ComboBox fx:id="userTypeComboBox" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <columnConstraints>
+         <ColumnConstraints />
+         <ColumnConstraints />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+      </rowConstraints>
     </GridPane>
 
-    <Button text="Add" onAction="#addUtilisateur"/>
+    <Button onAction="#addUtilisateur" text="Add" />
 
-    <Label text="Utilisateur List" />
+    <Label text="User List" />
     <TableView fx:id="utilisateurTableView">
         <columns>
-            <TableColumn fx:id="id_utilisateurColumn" text="ID"/>
-            <TableColumn fx:id="nomColumn" text="First Name"/>
-            <TableColumn fx:id="prenomColumn" text="Last Name"/>
-            <TableColumn fx:id="emailColumn" text="Email"/>
-            <TableColumn fx:id="mot_de_passeColumn" text="Password"/>
-            <TableColumn fx:id="date_de_naissanceColumn" text="Birth Date"/>
-            <TableColumn fx:id="typeColumn" text="Type"/>
+            <TableColumn fx:id="id_utilisateurColumn" text="ID" />
+            <TableColumn fx:id="nomColumn" text="First Name" />
+            <TableColumn fx:id="prenomColumn" text="Last Name" />
+            <TableColumn fx:id="emailColumn" text="Email" />
+            <TableColumn fx:id="mot_de_passeColumn" text="Password" />
+            <TableColumn fx:id="date_de_naissanceColumn" text="Birth Date" />
+            <TableColumn fx:id="typeColumn" text="Type" />
         </columns>
     </TableView>
 </VBox>
