--- a/src/main/resources/FXML/dash.fxml
+++ b/src/main/resources/FXML/dash.fxml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="799.0" prefWidth="1280.0" stylesheets="@Styles/discord_theme.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.UserDashboardController">
+<BorderPane fx:id="border" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1011.0" prefWidth="1000.0" stylesheets="@Styles/discord_theme.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.UserDashboardController">
    <top>
-      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
-         <ImageView fitHeight="97.0" fitWidth="106.0" pickOnBounds="true" preserveRatio="true">
+      <HBox fx:id="header" alignment="CENTER" prefHeight="50.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+         <ImageView fx:id="flixi" fitHeight="97.0" fitWidth="106.0" pickOnBounds="true" preserveRatio="true">
             <image>
                <Image url="@Images_Videos/logo-white.png" />
             </image>
          </ImageView>
-         <Pane HBox.hgrow="ALWAYS" />
-         <Pane HBox.hgrow="ALWAYS" />
-         <ImageView fx:id="notificon" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleNotificationClick" pickOnBounds="true" preserveRatio="true" translateX="-10.0">
+         <Pane fx:id="pane1" HBox.hgrow="ALWAYS" />
+         <Pane fx:id="pane2" HBox.hgrow="ALWAYS" />
+         <ImageView fx:id="notificon" fitHeight="44.0" fitWidth="81.0" onMouseClicked="#handleNotificationClick" pickOnBounds="true" preserveRatio="true" translateX="-10.0">
             <image>
                <Image url="@Images_Videos/notification%20(1).png" />
             </image>
          </ImageView>
-         <ImageView fx:id="profileicon" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleProfileClick" pickOnBounds="true" preserveRatio="true">
+         <ImageView fx:id="profileicon" fitHeight="56.0" fitWidth="138.0" onMouseClicked="#handleProfileClick" pickOnBounds="true" preserveRatio="true">
             <image>
                <Image url="@Images_Videos/utilisateur%20(1).png" />
             </image>
@@ -27,36 +32,123 @@
       </HBox>
    </top>
    <left>
-     <VBox alignment="TOP_CENTER" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
-    <ScrollPane fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="AS_NEEDED">
-        <VBox alignment="TOP_CENTER" spacing="10.0">
-         <Button fx:id="btnhome" mnemonicParsing="false" onAction="#handleHomeClick" text="Home" />
-         <Button mnemonicParsing="false" onAction="#handleFavoriteClick" text="Favorite" />
-         <Button mnemonicParsing="false" onAction="#handleScheduleClick" text="Schedule" />
-         <Button mnemonicParsing="false" onAction="#handleMoviesClick" text="Movies" />
-         <Button mnemonicParsing="false" onAction="#handleSeriesClick" text="Series" />
-         <Button mnemonicParsing="false" onAction="#handleRankClick" text="RANK" />
-         <Button mnemonicParsing="false" onAction="#hendleaddactor" text="ADDActeur" />
-         <Button mnemonicParsing="false" onAction="#handleaddproducteur" text="ADDProducteur" />
-         <Button mnemonicParsing="false" onAction="#handleaddserie" text="ADDSerie" />
-         <Button mnemonicParsing="false" onAction="#handleaddsaison" text="ADDSaison" />
-         <Button mnemonicParsing="false" onAction="#handleaddepisode" text="ADDEpisode" />
-         <Button mnemonicParsing="false" onAction="#handleaddfilm" text="ADDFilm" />
-         <Button mnemonicParsing="false" onAction="#handleadduser" text="ADDUSER" />
-         <Button mnemonicParsing="false" onAction="#handlerole_saison" text="Add r1" />
-         <Button mnemonicParsing="false" onAction="#handlerole_film" text="Add r2" />
+     <VBox fx:id="menu" alignment="TOP_CENTER" prefHeight="914.0" prefWidth="238.0" spacing="10.0" BorderPane.alignment="CENTER">
+    <ScrollPane fx:id="scroll2" fitToWidth="true" hbarPolicy="NEVER" prefHeight="914.0" prefWidth="307.0" vbarPolicy="AS_NEEDED">
+        <VBox fx:id="menu2" alignment="TOP_CENTER" prefHeight="1232.0" prefWidth="188.0" spacing="10.0">
+         <Button fx:id="btnhome" mnemonicParsing="false" onAction="#handleHomeClick" prefHeight="50.0" prefWidth="257.0" text="Home">
+                  <graphic>
+                     <ImageView fx:id="home" fitHeight="66.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/home-icon-silhouette.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnfavorite" mnemonicParsing="false" onAction="#handleFavoriteClick" prefHeight="50.0" prefWidth="251.0" text="Favorite">
+                  <graphic>
+                     <ImageView fx:id="heart" fitHeight="71.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/heart.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnschedule" mnemonicParsing="false" onAction="#handleScheduleClick" prefHeight="50.0" prefWidth="232.0" text="Schedule">
+                  <graphic>
+                     <ImageView fx:id="calen" fitHeight="72.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/calendar.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnmovie" mnemonicParsing="false" onAction="#handleMoviesClick" prefHeight="50.0" prefWidth="247.0" text="Movies">
+                  <graphic>
+                     <ImageView fx:id="film" fitHeight="64.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/movie-clapper-open.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnserie" mnemonicParsing="false" onAction="#handleSeriesClick" prefHeight="50.0" prefWidth="206.0" text="Series">
+                  <graphic>
+                     <ImageView fx:id="serie" fitHeight="65.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/tv.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnrank" mnemonicParsing="false" onAction="#handleRankClick" prefHeight="50.0" prefWidth="230.0" text="Ranking">
+                  <graphic>
+                     <ImageView fx:id="rank" fitHeight="75.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/ranking.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnm1" mnemonicParsing="false" onAction="#hendleaddactor" prefHeight="50.0" prefWidth="250.0" text="Actor Manager">
+                  <graphic>
+                     <ImageView fx:id="actor_manager" fitHeight="46.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/actor.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnm2" mnemonicParsing="false" onAction="#handleaddproducteur" prefHeight="50.0" prefWidth="311.0" text="Producer Manager">
+                  <graphic>
+                     <ImageView fx:id="producer" fitHeight="96.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/director.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnm3" mnemonicParsing="false" onAction="#handleaddserie" prefHeight="50.0" prefWidth="311.0" text="Serie Manager">
+                  <graphic>
+                     <ImageView fx:id="serie_manager" fitHeight="89.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/show.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+                  <Button fx:id="btnm4" mnemonicParsing="false" onAction="#handleaddsaison" prefHeight="50.0" prefWidth="275.0" text="Season Manager">
+                  <graphic>
+                     <ImageView fx:id="season_manager" fitHeight="80.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/show.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnm5" mnemonicParsing="false" onAction="#handleaddepisode" prefHeight="50.0" prefWidth="282.0" text="Episode Manager">
+                  <graphic>
+                     <ImageView fx:id="episode" fitHeight="97.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/show.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnm6" mnemonicParsing="false" onAction="#handleaddfilm" prefHeight="50.0" prefWidth="282.0" text="Movie Manager">
+                  <graphic>
+                     <ImageView fx:id="movie_manager" fitHeight="93.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/camera-video.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnm7" mnemonicParsing="false" onAction="#handleadduser" prefHeight="50.0" prefWidth="325.0" text="User Manager">
+                  <graphic>
+                     <ImageView fx:id="user_manager" fitHeight="72.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/homme.png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnm8" mnemonicParsing="false" onAction="#handlerole_saison" prefHeight="50.0" prefWidth="394.0" text="Serie Roles Manager">
+                  <graphic>
+                     <ImageView fx:id="serie_role" fitHeight="84.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/actor%20(1).png" />
+                        </image></ImageView>
+                  </graphic></Button>
+         <Button fx:id="btnm9" mnemonicParsing="false" onAction="#handlerole_film" prefHeight="50.0" prefWidth="270.0" text="Movie Roles Manager">
+                  <graphic>
+                     <ImageView fx:id="movie_role" fitHeight="94.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images_Videos/actor%20(1).png" />
+                        </image></ImageView>
+                  </graphic></Button>
         </VBox>
     </ScrollPane>
 </VBox>
    </left>
    <center>
-      <ScrollPane fitToWidth="true">
-    <content>
-        <HBox fx:id="contentPane">
-</HBox>
-
-    </content>
-</ScrollPane>
-
+      <ScrollPane fx:id="scrollpane" fitToWidth="true">
+         <content>
+            <HBox fx:id="contentPane" prefHeight="910.0" prefWidth="1300.0" />
+         </content>
+      </ScrollPane>
    </center>
 </BorderPane>
