--- a/src/main/resources/FXML/saison.fxml
+++ b/src/main/resources/FXML/saison.fxml
@@ -2,9 +2,10 @@
 
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
-<ScrollPane fitToWidth="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
+
+<ScrollPane fitToWidth="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="2000.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <content>
-      <VBox fx:id="seasonsContainer" spacing="20">
+      <VBox fx:id="seasonsContainer" prefHeight="48.0" prefWidth="1042.0" spacing="20">
          <!-- Seasons' layouts will be added here -->
       </VBox>
    </content>
