--- a/src/main/resources/FXML/FilmAdd.fxml
+++ b/src/main/resources/FXML/FilmAdd.fxml
@@ -11,19 +11,18 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="org.fsb.FlixFlow.Controllers.FilmAddController">
-	<Label text="Film CRUD Operations" />
-	<GridPane hgap="10" vgap="10">
+<VBox spacing="10" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.FilmAddController">
+	<GridPane hgap="10" prefHeight="331.0" prefWidth="626.0" vgap="10">
 		<Label text="ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 		<Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
 		<Label text="Release Year" GridPane.columnIndex="0" GridPane.rowIndex="2" />
 		<Label text="Image URL" GridPane.columnIndex="0" GridPane.rowIndex="3" />
 		<Label text="Video URL" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-		<Label text="Genre ID" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-		<Label text="Language ID" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-		<Label text="Country ID" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-		<Label text="Producer ID" GridPane.columnIndex="0" GridPane.rowIndex="9" />
-		<Label text="Synopsis" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+		<Label text="Genre ID" GridPane.rowIndex="6" />
+		<Label text="Language ID" GridPane.rowIndex="7" />
+		<Label text="Country ID" GridPane.rowIndex="8" />
+		<Label text="Producer ID" GridPane.rowIndex="9" />
+		<Label text="Synopsis" GridPane.rowIndex="10" />
 
 		<TextField fx:id="idTextField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 		<TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
