--- a/src/main/resources/FXML/SerieAdd.fxml
+++ b/src/main/resources/FXML/SerieAdd.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="org.fsb.FlixFlow.Controllers.SerieAddController">
-	<Label text="Serie CRUD Operations" />
+<VBox spacing="10" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.SerieAddController">
 	<GridPane hgap="10" vgap="10">
 		<Label text="ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 		<Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
