--- a/src/main/resources/FXML/Role_SerieAdd.fxml
+++ b/src/main/resources/FXML/Role_SerieAdd.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -10,10 +11,10 @@
 <AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.Role_SerieAddController">
    <HBox layoutX="14.0" layoutY="14.0" spacing="10.0">
       <children>
-         <TextField fx:id="id_acteurTextField" promptText="Id Acteur" />
-         <TextField fx:id="id_serieTextField" promptText="Id Saison" />
-         <TextField fx:id="id_saisonTextField" promptText="Id Saison" />
-         <TextField fx:id="role_typeTextField" promptText="Role Type" />
+         <TextField fx:id="id_acteurTextField" promptText="Id Actor" />
+         <TextField fx:id="id_serieTextField" promptText="Id Serie" />
+         <TextField fx:id="id_saisonTextField" promptText="Id Season" />
+         <ComboBox fx:id="role_typeComboBox" prefWidth="150.0" promptText="Role type" />
          <TextField fx:id="url_imageTextField" promptText="url_image" />
          <Button fx:id="addButton" mnemonicParsing="false" onAction="#handleAddAction" text="Add" />
          <Button fx:id="updateButton" mnemonicParsing="false" onAction="#handleUpdateAction" text="Update" />
@@ -22,11 +23,11 @@
    </HBox>
     <TableView fx:id="roleSerieTableView" layoutX="10.0" layoutY="50.0" prefHeight="200.0" prefWidth="972.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="50.0">
         <columns>
-            <TableColumn fx:id="id_acteurColumn" prefWidth="214.39999103546143" text="Id Acteur" />
+            <TableColumn fx:id="id_acteurColumn" prefWidth="214.39999103546143" text="Id Actor" />
             <TableColumn fx:id="id_serieColumn" prefWidth="135.2000274658203" text="Id Serie" />
-            <TableColumn fx:id="id_saisonColumn" prefWidth="181.5999755859375" text="Id Saison" />
+            <TableColumn fx:id="id_saisonColumn" prefWidth="181.5999755859375" text="Id Season" />
             <TableColumn fx:id="role_typeColumn" prefWidth="152.0" text="Role Type" />
-            <TableColumn fx:id="url_imageColumn" prefWidth="289.60003662109375" text="Role Type" />
+            <TableColumn fx:id="url_imageColumn" prefWidth="289.60003662109375" text="Url_Image" />
         </columns>
     </TableView>
 </AnchorPane>
