--- a/src/main/resources/FXML/episode_Others.fxml
+++ b/src/main/resources/FXML/episode_Others.fxml
@@ -3,43 +3,63 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="886.0" prefWidth="1587.0" style="-fx-background-color: #0E0E0E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.EpisodeLayoutController">
-   <children>
-<ListView fx:id="episodeListView" layoutX="39.0" layoutY="26.0" prefHeight="603.0" prefWidth="341.0">
-</ListView>
-      <WebView fx:id="episodeWebView" layoutX="425.0" layoutY="26.0" prefHeight="603.0" prefWidth="1100.0" />
-      <GridPane layoutX="38.0" layoutY="661.0" prefHeight="188.0" prefWidth="342.0">
+<ScrollPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fsb.FlixFlow.Controllers.EpisodeLayoutController">
+   <content>
+      <GridPane prefHeight="1348.0" prefWidth="1587.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="61.60001220703125" minHeight="10.0" prefHeight="61.60001220703125" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="61.60000000000001" minHeight="10.0" prefHeight="50.39998779296876" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Label fx:id="DATE_DIFFUSION" prefHeight="18.0" prefWidth="165.0" textFill="WHITE" />
-            <Text fx:id="synopsistext" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="70.39999999999998" GridPane.rowIndex="2" />
-            <Label fx:id="average" prefHeight="26.0" prefWidth="158.0" style="-fx-text-fill: white;" GridPane.rowIndex="1" />
+            <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1354.0" prefWidth="1587.0" style="-fx-background-color: #0E0E0E;">
+               <children>
+            <ListView fx:id="episodeListView" layoutX="39.0" layoutY="26.0" prefHeight="603.0" prefWidth="341.0">
+</ListView>
+                  <WebView fx:id="episodeWebView" layoutX="425.0" layoutY="26.0" prefHeight="603.0" prefWidth="1100.0" />
+                  <GridPane layoutX="38.0" layoutY="661.0" prefHeight="188.0" prefWidth="342.0" style="-fx-border-color: white;">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="61.60001220703125" minHeight="10.0" prefHeight="61.60001220703125" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="61.60000000000001" minHeight="10.0" prefHeight="50.39998779296876" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label fx:id="DATE_DIFFUSION" prefHeight="18.0" prefWidth="165.0" textFill="WHITE" />
+                        <Label fx:id="average" prefHeight="26.0" prefWidth="158.0" style="-fx-text-fill: white;" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+            <Slider fx:id="episodeRatingSlider" blockIncrement="1.0" layoutX="1385.0" layoutY="781.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+            <Button fx:id="submitEpisodeRatingButton" layoutX="1409.0" layoutY="819.0" mnemonicParsing="false" style="-fx-background-color: #5A2E98; -fx-text-fill: white;" text="Submit Rating" />      <TextField fx:id="txtcomment" layoutX="911.0" layoutY="759.0" prefHeight="26.0" prefWidth="448.0" style="-fx-border-color: #5A2E98; -fx-border-width: 3;" />
+                  <Button fx:id="addcommentbtn" layoutX="1067.0" layoutY="707.0" mnemonicParsing="false" style="-fx-background-color: #5A2E98; -fx-text-fill: white;" text="Add comment" />
+                  <ListView fx:id="listcomments" layoutX="441.0" layoutY="687.0" prefHeight="170.0" prefWidth="458.0" style="-fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: #5A2E98; -fx-border-width: 2;" />
+                  <Button fx:id="modifbtn" layoutX="1195.0" layoutY="707.0" mnemonicParsing="false" style="-fx-background-color: #5A2E98; -fx-text-fill: white;" text="Modify" />
+                  <Button fx:id="delbtn" layoutX="1281.0" layoutY="707.0" mnemonicParsing="false" style="-fx-background-color: #5A2E98; -fx-text-fill: white;" text="Delete" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1c1c1c" height="38.0" layoutX="425.0" layoutY="639.0" stroke="WHITE" strokeType="INSIDE" width="1100.0" />
+                  <HBox layoutX="34.0" layoutY="893.05078125" style="-fx-background-color: transparent; -fx-border-color: white;">
+                     <children>
+                        <Text fx:id="synopsistext" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="851.9999755859375" />
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
          </children>
       </GridPane>
-<Slider fx:id="episodeRatingSlider" blockIncrement="1.0" layoutX="1385.0" layoutY="781.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-<Button fx:id="submitEpisodeRatingButton" layoutX="1409.0" layoutY="819.0" mnemonicParsing="false" style="-fx-background-color: #5A2E98; -fx-text-fill: white;" text="Submit Rating" />      <TextField fx:id="txtcomment" layoutX="911.0" layoutY="759.0" prefHeight="26.0" prefWidth="448.0" />
-      <Button fx:id="addcommentbtn" layoutX="1067.0" layoutY="707.0" mnemonicParsing="false" style="-fx-background-color: #5A2E98; -fx-text-fill: white;" text="Add comment" />
-      <ListView fx:id="listcomments" layoutX="441.0" layoutY="687.0" prefHeight="170.0" prefWidth="458.0" style="-fx-background-radius: 10;" />
-      <Button fx:id="modifbtn" layoutX="1195.0" layoutY="707.0" mnemonicParsing="false" style="-fx-background-color: #5A2E98; -fx-text-fill: white;" text="Modify" />
-      <Button fx:id="delbtn" layoutX="1281.0" layoutY="707.0" mnemonicParsing="false" style="-fx-background-color: #5A2E98; -fx-text-fill: white;" text="Delete" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1c1c1c" height="38.0" layoutX="425.0" layoutY="639.0" stroke="WHITE" strokeType="INSIDE" width="1100.0" />
-   </children>
-</AnchorPane>
+   </content>
+</ScrollPane>
